# dhl-alpha

./: .gitignore  .markdown-preview.html  README.md  dhl  dhl.opam  dune-project
.github/workflows/: build.yml
analyzer/: README.md  analyzer.ml  breakdown.ml  link_check.ml
compiler/: README.md  compiler.ml  dune
compiler/analyzer/: alpha.ml  analyzer.ml  breakdown.ml  dune  link_check.ml
compiler/generator/: README.md  dune  generator.ml  instruction.ml  match.ml
compiler/parser/: parse.ml  syntax.ml
docs/: README.md  index.html  index.md  index.org  memo.html  memo.org  memo_old.org
docs/dhl/: index.html
docs/old/: about.html  about.org  (+7 more)
example/: README.md  append.dhl  test.dhl  test2.dhl  test3.dhl  test4.dhl  test5.dhl  test6.dhl
front_end/: README.md  alpha.ml  dune  front_end.ml  parser.mly  syntax.ml
generator/: README.md  dune  gen_ic.ml  generator.ml  instruction.ml  match.ml  pushout.ml  register_table.ml
middle_end/: dune  gen_ic.ml  instruction.ml  match.ml  pushout.ml  register_table.ml  vm.ml
parser/: README.md  dune  lexer.mll  parse.ml
runtime/: README.md  debug_vm.ml  dump.ml  dune  loader.ml  main.ml  pretty.ml  vm.ml
scripts/: cloc.sh  count_lines.sh  dep_graph.py  gen_docs.sh
src/: breakdown.ml  dump.ml  eval.ml  instruction.ml  match.ml  pushout.ml  redir.ml  util.ml  vm.ml
test/: dune  gen_output.sh  test-colorless.sh  test.ml  test.sh  test_compiler.ml
util/: dune  util.ml
vm/: README.md  debug_syntax.ml  debug_vm.ml  dump.ml  dune  eval.ml  main.ml  match.ml  pushout.ml  redir.ml  util.ml  vm.ml  vm_main.ml
(+92 files in other folders)
